workspace = {members = ["macros"]}

[package]
authors = ["Js2xxx <akucxy@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "owned-pin"
readme = "README.md"
version = "1.3.2"

description = "A wrapper that both owns and pins data in memory"

categories = ["data-structures", "memory-management"]
keywords = ["owned", "pin", "move", "rvalue"]
repository = "https://github.com/js2xxx/owned-pin"

[features]
alloc = ["pinned-init/alloc"]
default = ["alloc", "pinned-init"]
pinned-init = ["dep:pinned-init"]

[dependencies]
owned-pin-macros = {version = "0.2"}
pinned-init = {version = "0.0", default-features = false, optional = true}
