[package]
authors = ["Js2xxx <akucxy@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "owned-pin-macros"
version = "0.0.0"

description = "A wrapper that both owns and pins data in memory"

categories = ["data-structures", "memory-management"]
keywords = ["owned", "pin", "move", "rvalue"]
repository = "https://github.com/js2xxx/owned-pin"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
